# zygisk-Dynamic-Injector-tool

./: README.md  README_CN.md  build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
injector-app/: build.gradle.kts  proguard-rules.pro  settings.gradle.kts
injector-app/src/main/: AndroidManifest.xml
injector-app/src/main/cpp/: CMakeLists.txt  libtool.cpp
injector-app/src/main/java/com/injector/app/: MainActivity.kt
injector-app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
injector-app/src/main/res/layout/: activity_main.xml
injector-app/src/main/res/values/: strings.xml  themes.xml
module/src/main/cpp/: CMakeLists.txt  injector_core.cpp  injector_core.h  libinjector.cpp  libinjector.h  zygisk_injector.cpp
module/template/: customize.sh  module.prop  post-fs-data.sh  service.sh  zn_modules.txt
